--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,40 @@
 buildscript {
-  ext.kotlin_version = '1.4.10'
+  apply plugin: 'hyperskill'
+
+  wrapper {
+    gradleVersion = hs.android.gradleVersion
+  }
+
+  def kotlinGradleVersion = hs.android.kotlinGradleVersion
+  def androidGradleVersion = hs.android.getAndroidGradleVersion(gradle.gradleVersion)
+
   repositories {
     google()
     mavenCentral()
+    maven { url 'https://jitpack.io' }
   }
+
   dependencies {
-    classpath 'com.android.tools.build:gradle:7.0.4'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.github.hyperskill:hs-gradle-plugin:release-SNAPSHOT'
+    classpath "com.android.tools.build:gradle:$androidGradleVersion"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinGradleVersion"
+  }
+
+  configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
   }
 }
 
 allprojects {
+  apply plugin: 'hyperskill'
+
   repositories {
     google()
     mavenCentral()
   }
+
   afterEvaluate {
-    if (extensions.findByName("android") != null) {
+    if (extensions.findByName('android') != null) {
       android {
         testOptions {
           unitTests {
@@ -37,11 +55,24 @@ allprojects {
             }
           }
         }
+
+        defaultConfig {
+          testInstrumentationRunner "org.hyperskill.musicplayer.AndroidEduTestRunner"
+        }
+      }
+
+      dependencies {
+        def robolectric = hs.android.robolectricVersion
+        testImplementation "org.robolectric:robolectric:$robolectric"
+
+        def junit = hs.android.lib.junit
+        testImplementation "junit:junit:$junit"
+
+        androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+        androidTestImplementation 'androidx.test:rules:1.4.0'
+        androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
       }
     }
   }
-}
-
-task clean(type: Delete) {
-  delete rootProject.buildDir
 }
